# minilm-lambda-eval

./: .gitignore  README.md  check_missing.py  export_onnx.py  main.py  preflight_check.sh  pyproject.toml  queries.json  run_all_ec2_tests.sh  run_all_laptop_tests.sh  samconfig.toml  template.yaml
analysis/: build_report.py  collect_all.py  pull_cloudwatch.py
data/: corpus_embeddings.npy  corpus_questions.json  user_questions.json
data/raw/: burst_onnx_n10_run1_cloudwatch.csv  burst_onnx_n10_run1_stats.csv  burst_onnx_n10_run1_stats_history.csv  burst_onnx_n10_run1_window.json  burst_onnx_n10_run2_cloudwatch.csv  burst_onnx_n10_run2_stats.csv  burst_onnx_n10_run2_stats_history.csv  burst_onnx_n10_run2_window.json  burst_onnx_n10_run3_cloudwatch.csv  burst_onnx_n10_run3_stats.csv  burst_onnx_n10_run3_stats_history.csv  burst_onnx_n10_run3_window.json  burst_onnx_n10_run4_cloudwatch.csv  burst_onnx_n10_run4_stats.csv  burst_onnx_n10_run4_stats_history.csv  burst_onnx_n10_run4_window.json  burst_onnx_n10_run5_cloudwatch.csv  burst_onnx_n10_run5_stats.csv  burst_onnx_n10_run5_stats_history.csv  burst_onnx_n10_run5_window.json  burst_onnx_n15_run1_cloudwatch.csv  burst_onnx_n15_run1_failures.csv  burst_onnx_n15_run1_stats.csv  (+691 more)
docs/: RUNNING_EXPERIMENTS.md  aws-test.md  ldocker-test.md  setup.md
lambda/onnx/: Dockerfile  (+2 more)
load_testing/: cold_start_test.sh  common.py  locustfile_burst.py  locustfile_shaped.py  run_experiment.sh  setup_ec2.sh
scripts/: curate_user_questions.py  export_to_onnx.py  precompute_embeddings.py  requirements-dev.txt  test_handlers_locally.py
(+44 files in other folders)
